# character_crawler

./: .env  Dockerfile  README.md  create_csv.py  create_csv_total.py  docker-compose.yaml  pyproject.toml  pytest.ini
tests/: test_crawler.py
wrtn_character_crawler/: __main__.py  crawler.py  database.py  models.py
