[tool.poetry]
name = "wrtn-character-crawler"
version = "0.1.0"
description = ""
authors = ["blluv <biluv@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
playwright = "^1.48.0"
aiohttp = "^3.10.10"
pymysql = "^1.1.1"
python-dotenv = "^1.0.1"
cryptography = "^43.0.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
jsonschema = "^4.23.0"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
